--- a/src/pages/HelloWorld.css
+++ b/src/pages/HelloWorld.css
@@ -30,7 +30,7 @@
 	margin: 0 0 var(--spacing-xl) 0;
 	opacity: 0.9;
 	animation: fadeInUp 0.8s ease;
-	text-align: center;
+	text-align: left;
 	color: var(--text-secondary);
 }
 
